a6000: overlay: Enable lockscreen blur
* Kanged and hex edited libuiblur.so from crackling nougat update

Change-Id: Ib8f0e43cdab4b817ec8d6af74c78b679fc651f16

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -230,6 +230,7 @@
     <!-- enabling WifiDisplay(Miracast Source)-->
     <bool name="config_enableWifiDisplay">true</bool>
 
-    <integer name="config_defaultLiveDisplayMode">0</integer>
+    <!-- Enable Blur for a capable device -->
+    <bool name="config_uiBlurEnabled">true</bool>
 
 </resources>
