--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -230,6 +230,6 @@
     <!-- enabling WifiDisplay(Miracast Source)-->
     <bool name="config_enableWifiDisplay">true</bool>
 
-    <integer name="config_defaultLiveDisplayMode">0</integer>
+    <bool name="config_uiBlurEnabled">true</bool>
 
 </resources>
