--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -230,4 +230,7 @@
     <!-- enabling WifiDisplay(Miracast Source)-->
     <bool name="config_enableWifiDisplay">true</bool>
 
+    <!-- Enable Blur for a capable device -->
+    <bool name="config_uiBlurEnabled">true</bool>
+
 </resources>
